Fix scrollbars while loading

--- a/scss/components/_error.scss
+++ b/scss/components/_error.scss
@@ -1,5 +1,4 @@
 .error:empty {
-  overflow: hidden;
   position: relative;
 
   &:after,
@@ -27,7 +26,7 @@
       0.5s;
     animation-duration:
       0.5s,
-      2s;
+      4s;
     animation-fill-mode: forwards;
     animation-iteration-count:
       1,
@@ -35,6 +34,9 @@
     animation-name:
       error-start,
       error;
+    animation-timing-function:
+      ease,
+      linear;
     border-color: currentColor;
     content: '';
   }
