--- a/scss/components/_loading.scss
+++ b/scss/components/_loading.scss
@@ -1,5 +1,4 @@
 .loading:empty {
-  overflow: hidden;
   position: relative;
 
   &:after,
